--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "node": "12.x"
   },
   "dependencies": {
+    "csv-parser": "^2.3.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
     "node": "^14.4.0",
     "nodemon": "^2.0.4",
     "pug": "^3.0.0"
